--- a/limbo/affiliate/templates/blog/programing/search bar.html
+++ b/limbo/affiliate/templates/blog/programing/search bar.html
@@ -41,7 +41,7 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h1 class="content_tittle" style="font-weight: 750;" >How to add a search bar in Django site</h1>
+          <h1 class="content_tittle" style="font-weight: 700;" >How to add a search bar in Django site</h1>
           <p>By <a href="#">Rohit Raj</a>- Updated on <b style="color: gray;">11 August 2020</b></p>
           <hr class="my-2">
           <p>In this article, we are going to learn how to add a search bar on your website using the Django web framework. if don't know about the Django web framework <a href="https://docs.djangoproject.com/en/3.0/">click here</a>.</p>
@@ -116,7 +116,7 @@
           <div class="code content">
             <p>$ python manage.py createsuperuser</p>
           </div><br>
-          <p>after successfully creating user admin you need to update <span class= "command">product/admin.py</span> to display our app within the admin. Here we import <span class= "command">Product_List</span> from <span class= "command">models.py</span> to register your model in <span class= "command">admin.py</span.</p>
+          <p>after successfully creating user admin you need to update <span class= "command">product/admin.py</span> to display our app within the admin. Here we import <span class= "command">Product_List</span> from <span class= "command">models.py</span> to register your model in <span class= "command">admin.py</span>.</p>
           <div class="code content">
             <pre class="content"> <i># cities/admin.py</i>
   from django.contrib import admin
@@ -174,7 +174,7 @@
           </div><br>
           <p>Here we have created a function, in this function we are using <span class="command">Django-filter</span>. Django-filter provides a simple way to filter the queryset based on user-provided parameters. Suppose we have a <span class="command">Product_List</span> model and we want to allow our users to filter the products they see on a search page. </p>
           <h3 style="padding-left:3px; border-left: 2px solid red; font-weight: 500;">urls.py</h3>
-          <p>Now we will update the path of our home page and search page in our <span <span class= "command">urls.py</span>.</p>
+          <p>Now we will update the path of our home page and search page in our <span class= "command">urls.py</span>.</p>
           <div class="code content">
             <pre class="content">  <i># shop/urls.py</i>
 
@@ -210,13 +210,11 @@
           <p class="content"></p>
           <p>Now we will make the home page. In the template folder, we will create an HTML file with the name of a <span class= "command">home page</span>. In this page we will create a title using tag h1.</p>
           <div class="code content">
-            <pre class="content">  <i># templates/home page.html</i>
-    &#60body&#62
-
-        <span>&#60h1&#62</span>Online Shop<span>&#60/h1&#62</span>
-
-    &#60/body&#62
-            </pre>
+            <pre class="content"><code><i># templates/home page.html</i>
+  &#60body&#62
+    <span>&#60h1&#62</span>Online Shop<span>&#60/h1&#62</span>
+  &#60/body&#62
+            </code></pre>
           </div><br>
           <p>here you have to start your server ones again with <span class= "command">python manage.py runserver</span> and Open this <a href="http://127.0.0.1:8">http://127.0.0.1:8</a> link in your web browser</p>
           <img class="image" src="{% static 'image/article/programing/search bar/4.png'%}" alt="">
@@ -234,17 +232,15 @@
           <p class="content"></p>
           <p>To keep it simple, we are not using CSS for styling. We aim to make you understand the concept of this search bar. to create a search bar we are using form tag.</p>
           <div class="code content">
-            <pre class="content">  <i># templates/home page.html</i>
-    &#60body&#62
-
-        &#60<span>h1</span>&#62Online Shop&#60/<span>h1</span>&#62
-        &#60<span>form</span> action="&#123% url 'search_result' %&#125" method="get"&#62
-          &#60input name="query" type="text" placeholder="Search here.." &#62
-          &#60button type="submit" name="button"&#62Submit&#60/button&#62
-        &#60<span>/form</span>&#62
-
-    &#60/body&#62
-            </pre>
+            <pre class="content"><code><i># templates/home page.html</i>
+ &#60body&#62
+    &#60<span>h1</span>&#62Online Shop&#60/<span>h1</span>&#62
+    &#60<span>form</span> action="&#123% url 'search_result' %&#125" method="get"&#62
+      &#60input name="query" type="text" placeholder="Search here.." &#62
+      &#60button type="submit" name="button"&#62Submit&#60/button&#62
+    &#60<span>/form</span>&#62
+ &#60/body&#62
+            </code></pre>
           </div><br>
           <p>In the form tag, we are using <span>action</span> and <span>method</span> attributes. The action attribute in the form will redirect the user to another page by clicking on the submit button. We are using the URL name for our search results page here. Then we specify the use of get as our method.</p>
           <p>Here you have to start your server ones again with <span class= "command">python manage.py runserver</span> and Open this <a href="http://127.0.0.1:8">http://127.0.0.1:8</a> link in your web browser.</p>
@@ -257,20 +253,19 @@
           <p class="content"></p>
           <p>Now we will make the <span class= "command">search page</span>. In the template folder, we will create an HTML file with the name of a search page.</p>
           <div class="code content">
-            <pre class="content">  <i># templates/search page.html</i>
-    &#60body&#62
+            <pre class="content"><code><i># templates/search page.html</i>
+ &#60body&#62
+    &#60<span>h1</span>&#62Search Result&#60/<span>h1</span>&#62
+    &#60ul&#62
+        &#123% for product in products %&#125
+        &#60li&#62
+          &#123&#123 product.name &#125&#125, &#123&#123 product.price &#125&#125
+        &#60/li&#62
+        &#123% endfor %&#125
+    &#60/ul&#62
 
-        &#60<span>h1</span>&#62Search Result&#60/<span>h1</span>&#62
-        &#60ul&#62
-            &#123% for product in products %&#125
-            &#60li&#62
-              &#123&#123 product.name &#125&#125, &#123&#123 product.price &#125&#125
-            &#60/li&#62
-            &#123% endfor %&#125
-        &#60/ul&#62
-
-    &#60/body&#62
-            </pre>
+  &#60/body&#62
+            </code></pre>
           </div><br>
           <p>We have fully completed this project. You can check the server to see if your engine is working or not. I am searching realme 6 in my search bar. it will show all the results from the realme will show you.</p>
           <img class="image" src="{% static 'image/article/programing/search bar/6.png'%}" alt="">
