non chinese mobile

--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -558,7 +558,7 @@
               <h4>Trending Blogs</h4>
             </div>
             <div class="side-blog-post">
-              <img class="side-blog-img" src="{% static 'image/mobile\10k\redmi-8.jpg'%}" alt="">
+              <img class="side-blog-img" src="{% static 'image\mobile\10k\redmi-8.jpg'%}" alt="">
               <div class="side-bloger-name">
                 <img src="{% static 'image/team/aman-acharya.jpg'%}" alt="">
                 <a href="{% url 'mobile10k'%}"><h6>Best smartphone under 10,000-INR </h6></a>
@@ -579,6 +579,23 @@
       <div class="blogs">
         <div class="blog-posts ">
          <a href="https://www.semrush.com/siteaudit/?ref=3048987354&utm_campaign=banner_orange_728x90&utm_source=berush&utm_medium=promo&utm_term=143" target="_blank"><img class="semrush" height="90" src="https://pm.berush.com/source/banners/image/16/en/728_90.gif" alt="SEMrush" /></a>
+         <!-- 6 -->
+         <article class="blog-post shadow">
+           <div class="post">
+             <div class="">
+               <img class="img-article" src="{% static 'image\mobile\10k\mobile-10k.jpg '%}" alt="">
+             </div>
+             <div class="post-info">
+               <h3  style="font-weight: 400;">10 non-chinese smartphone under 10,000</h3>
+               <p style="color:gray;">If you do not like Chinese mobiles, in this article, we will talk about the specification and price of the top 5 non-Chinese smartphones under 10000 and you can buy from eCommerce websites like Amazon or Flipkart. </p>
+               <p></p><br>
+               <div class="badge">
+                 <a class="read-more" href="{% url 'nonchinesemobile' %}">Read more</a>
+                 <a class="Categories" style="color: gray" href="#"><b>Categories</b> : Programing</a>
+               </div>
+             </div>
+           </div>
+         </article>
          <!-- 5 -->
          <article class="blog-post shadow">
            <div class="post">
