non chinese mobile

--- a/limbo/affiliate/templates/blog/mobile/non chinese mobile/non-chinese-mobile.html
+++ b/limbo/affiliate/templates/blog/mobile/non chinese mobile/non-chinese-mobile.html
@@ -43,7 +43,7 @@
           <div>
             <img class="image" src="{% static 'mage\article\mobile\non chinese mobile\moto-g8-power-lite.jpg '%}" alt="">
           </div>
-          <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com-uploaded by IT.TECH</p>
+          <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com-uploaded by TechSole Blog</p>
           <p class="content"><b>Price</b>: 9,999-INR <br><b>Available on</b>: Flipkart</p>
           <h4 style="font-weight: 400;">About Motorola G8 Power Lite</h4>
           <p class="content">The Moto G8 Power Lite is quite chunky, with a thickness of 9.2mm, and also a bit heavy at nearly 200g. Moto G8 Power Lite in India starting from 9,999-INR. Moto G8 Power Lite Available at Flipkart at the lowest prices. This smartphone comes with a single variants 4/64GB with color options like 	Arctic Blue, and Royal Blue. The smartphone is powered by the Mediatek MT6765 Helio P35 (12nm) and Non-removable Li-Po 5000 mAh battery. it supports Fast charging of 10W.</p>
