non chinese mobile

--- a/limbo/affiliate/templates/blog/mobile/non chinese mobile/non-chinese-mobile.html
+++ b/limbo/affiliate/templates/blog/mobile/non chinese mobile/non-chinese-mobile.html
@@ -3,7 +3,7 @@
 {% block key%}<meta name="keywords" content="non-chinese smartphone under 10000, non-chinese smartphone"> {% endblock key%}
 {% block style %}
 <style>
-  p{font-family: sans-serif;font-size: 16px;}@media (max-width: 768px){p{font-size: 19px;}.content{font-size: 18px;}ul{margin-left: -10px;}li{font-size: 18px;}footer p{font-size: 14px;}}
+  p{font-family: sans-serif;font-size: 17px;}@media (max-width: 768px){p{font-size: 18px;}.content{font-size: 16px;}ul{margin-left: -10px;}li{font-size: 17px;}footer p{font-size: 14px;}}
 </style>
 {% endblock style %}
   {% load static %}
@@ -21,7 +21,7 @@
           <p>If you do not like Chinese mobiles, in this article, we will talk about the specification and price of the top 5 non-Chinese smartphones under 10000 and you can buy from eCommerce websites like Amazon or Flipkart. To know more about "Smartphone Market Share India" you can read the <a href="https://candytech.in/smartphone-market-share-india/">Candytech.in</a> the article which is quite awesome.</p>
         </div>
         <div>
-          <img class="image" src="{% static 'mage\article\mobile\non chinese mobile\mobile-10k.jpg '%}" alt="">
+          <img class="image" src="{% static 'image\article\mobile\non chinese mobile\mobile-10k.jpg '%}" alt="">
           <hr class="my-2">
         </div>
         <div class="info">
@@ -41,7 +41,7 @@
         <div class="info">
           <h3 style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">1. Motorola G8 Power Lite</h3>
           <div>
-            <img class="image" src="{% static 'mage\article\mobile\non chinese mobile\moto-g8-power-lite.jpg '%}" alt="">
+            <img class="image" src="{% static 'image\article\mobile\non chinese mobile\moto-g8-power-lite.jpg '%}" alt="">
           </div>
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com-uploaded by TechSole Blog</p>
           <p class="content"><b>Price</b>: 9,999-INR <br><b>Available on</b>: Flipkart</p>
