--- a/limbo/affiliate/templates/blog/mobile/non chinese mobile/non-chinese-mobile.html
+++ b/limbo/affiliate/templates/blog/mobile/non chinese mobile/non-chinese-mobile.html
@@ -3,7 +3,7 @@
 {% block key%}<meta name="keywords" content="non-chinese smartphone under 10000, non-chinese smartphone"> {% endblock key%}
 {% block style %}
 <style>
-  p{font-family: sans-serif;font-size: 17px;}@media (max-width: 768px){p{font-size: 18px;}.content{font-size: 16px;}ul{margin-left: -10px;}li{font-size: 17px;}footer p{font-size: 14px;}}
+  p{font-family: sans-serif;font-size: 17px;}@media (max-width: 768px){p{font-size: 18px;}.content{font-sipx;}ul{margin-left: -10px;}li{font-size: 17px;}footer p{font-size: 14px;}}
 </style>
 {% endblock style %}
   {% load static %}
@@ -21,7 +21,7 @@
           <p>If you do not like Chinese mobiles, in this article, we will talk about the specification and price of the top 5 non-Chinese smartphones under 10000 and you can buy from eCommerce websites like Amazon or Flipkart. To know more about "Smartphone Market Share India" you can read the <a href="https://candytech.in/smartphone-market-share-india/">Candytech.in</a> the article which is quite awesome.</p>
         </div>
         <div>
-          <img class="image" src="{% static 'image\article\mobile\non chinese mobile\mobile-10k.jpg '%}" alt="">
+          <img class="image" src="{% static 'image\article\mobile\non chinese mobile\mobile-10k.jpeg' %}" alt="">
           <hr class="my-2">
         </div>
         <div class="info">
@@ -41,7 +41,7 @@
         <div class="info">
           <h3 style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">1. Motorola G8 Power Lite</h3>
           <div>
-            <img class="image" src="{% static 'image\article\mobile\non chinese mobile\moto-g8-power-lite.jpg '%}" alt="">
+            <img class="image" src="{% static 'image\article\mobile\non chinese mobile\moto-g8-power-lite.jpg' %}" alt="">
           </div>
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com-uploaded by TechSole Blog</p>
           <p class="content"><b>Price</b>: 9,999-INR <br><b>Available on</b>: Flipkart</p>
@@ -49,13 +49,13 @@
           <p class="content">The Moto G8 Power Lite is quite chunky, with a thickness of 9.2mm, and also a bit heavy at nearly 200g. Moto G8 Power Lite in India starting from 9,999-INR. Moto G8 Power Lite Available at Flipkart at the lowest prices. This smartphone comes with a single variants 4/64GB with color options like 	Arctic Blue, and Royal Blue. The smartphone is powered by the Mediatek MT6765 Helio P35 (12nm) and Non-removable Li-Po 5000 mAh battery. it supports Fast charging of 10W.</p>
           <h4 style="font-weight: 400;">Motorola G8 Power Lite: Key specifications </h4>
           <ul class="content">
-            <li><b>OS</b>: Android 9.0 (Pie)</li>
-            <li><b>Display</b>: 6.5 inches</li>
-            <li><b>Processor</b>:	Mediatek MT6765 Helio P35</li>
-            <li><b>primary camera</b>: 	16 MP + 2 MP + 2 MP</li>
-            <li><b>selfie camera</b>: 8-megapixel </li>
-            <li><b>Storage + RAM</b>: 4/64GB RAM</li>
-            <li><b>Battery</b>: Non-removable Li-Po 5000 mAh battery</li>
+            <li>OS: Android 9.0 (Pie)</li>
+            <li>Display: 6.5 inches</li>
+            <li>Processor:	Mediatek MT6765 Helio P35</li>
+            <li>primary camera: 	16 MP + 2 MP + 2 MP</li>
+            <li>selfie camera: 8-megapixel </li>
+            <li>Storage + RAM: 4/64GB RAM</li>
+            <li>Battery: Non-removable Li-Po 5000 mAh battery</li>
             <li>charging 10W</li>
           </ul>
           <div class="aff-link1">
