non chinese mobile

--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -583,7 +583,7 @@
          <article class="blog-post shadow">
            <div class="post">
              <div class="">
-               <img class="img-article" src="{% static 'image\mobile\10k\mobile-10k.jpg '%}" alt="">
+               <img class="img-article" src="{% static 'image\article\mobile\non chinese mobile\mobile-10k.jpeg' %}" alt="">
              </div>
              <div class="post-info">
                <h3  style="font-weight: 400;">10 non-chinese smartphone under 10,000</h3>
