--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -590,7 +590,7 @@
                <p style="color:gray;">If you do not like Chinese mobiles, in this article, we will talk about the specification and price of the top 5 non-Chinese smartphones under 10000 and you can buy from eCommerce websites like Amazon or Flipkart. </p>
                <p></p><br>
                <div class="badge">
-                 <a class="read-more" href="{% url 'nonchinesemobile' %}">Read more</a>
+                 <a class="read-more" href="{% url 'NonChineseMobile' %}">Read more</a>
                  <a class="Categories" style="color: gray" href="#"><b>Categories</b> : Programing</a>
                </div>
              </div>
