--- a/limbo/affiliate/templates/blog/mobile/non-chinese-mobile/non-chinese-mobile.html
+++ b/limbo/affiliate/templates/blog/mobile/non-chinese-mobile/non-chinese-mobile.html
@@ -2,8 +2,25 @@
 {% block desc%}<meta name="description" content="If you do not like Chinese mobiles, in this article, we will talk about the specification and price of the top 5 non-Chinese smartphones under 10000 and you can buy from eCommerce websites like Amazon or Flipkart."> {% endblock desc%}
 {% block key%}<meta name="keywords" content="non-chinese smartphone under 10000, non-chinese smartphone"> {% endblock key%}
 {% block script %}
-
-{% block style %}
+<!-- <script type="application/ld+json">
+{
+  "@context" : "http://schema.org",
+  "@type" : "Article",
+  "name" : "10 non-chinese smartphone under 10000",
+  "author" : {
+    "@type" : "Person",
+    "name" : "Prince Singh Rajput"
+  },
+  "datePublished" : "2020-08-17",
+  "image" : "https://www.hipein.com/static/image/article/mobile/non%20chinese%20mobile/mobile-10k.jpeg",
+  "url" : "https://www.hipein.com/mobile/non-chinese-smartphone",
+  "publisher" : {
+    "@type" : "Organization",
+    "name" : "hipein.com"
+  }
+}
+</script>
+{% block style %} -->
 <style>
   p{font-family: sans-serif;font-size: 17px;}@media (max-width: 768px){p{font-size: 18px;}.content{font-sipx;}ul{margin-left: -10px;}li{font-size: 17px;}footer p{font-size: 14px;}}
 </style>
