--- a/limbo/affiliate/templates/blog/mobile/non-chinese-mobile/non-chinese-mobile.html
+++ b/limbo/affiliate/templates/blog/mobile/non-chinese-mobile/non-chinese-mobile.html
@@ -20,6 +20,7 @@
   }
 }
 </script>
+{% endblock script %}
 {% block style %}
 <style>
   p{font-family: sans-serif;font-size: 17px;}@media (max-width: 768px){p{font-size: 18px;}.content{font-sipx;}ul{margin-left: -10px;}li{font-size: 17px;}footer p{font-size: 14px;}}
