--- a/limbo/affiliate/templates/blog/mobile/non-chinese-mobile/non-chinese-mobile.html
+++ b/limbo/affiliate/templates/blog/mobile/non-chinese-mobile/non-chinese-mobile.html
@@ -366,6 +366,7 @@ Sohag360-<a href="https://www.youtube.com/watch?v=ApOiLkbTmXc">Click here</a></p
           </div><br>
           <p>I hope that you got a lot of help with this "10 non-chinese smartphone under 10000" article. If you want to take the mobile of any company within Rs 10000, then <a href="{% url 'mobile10k'%}">click here</a>. This is Prince Singh Rajput, you can follow me on Instagram. This is my Instagram official id <a href="https://www.instagram.com/prince_singh_rajput8/?hl=en">prince_singh_rajput8</a>.</p>
           <hr class="my-2">
+          <div class="fb-comments" data-href="https://www.hipein.com/mobile/non-chinese-smartphone" data-numposts="5" data-width=""></div>
         </div>
         <!-- 11 -->
       </div>
