--- a/limbo/affiliate/templates/blog/mobile/non-chinese-mobile/non-chinese-mobile.html
+++ b/limbo/affiliate/templates/blog/mobile/non-chinese-mobile/non-chinese-mobile.html
@@ -27,14 +27,14 @@
 </style>
 {% endblock style %}
   {% load static %}
-    {% block title%}Best mobile under 10,000-INR - HipeIn.com{% endblock title%}
+    {% block title%}10 non-chinese smartphone under 10000 - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h1 style="font-weight: 400;" >10 non-chinese smartphone under 10000 - hipein</h1>
+          <h1 style="font-weight: 400;" >10 non-chinese smartphone under 10000</h1>
           <p>By <a href="https://www.instagram.com/prince_singh_rajput8/?hl=en">Prince Singh Rajput</a> - Updated on <b style="color:gray">17 August 2020</b></p>
           <hr class="my-2">
           <p>If you talk about a cheap smartphone, then Chinese smartphones are selling more in India than other country's smartphones. Chinese smartphone has about 73% market share in India, while the rest is taken by Samsung, Asus, Apple, Google, and others. 158 million smartphones were shipped to India in 2019. Of which, Chinese manufacturers shipped 113 million mobiles.</p>
