--- a/limbo/affiliate/templates/page/bas.html
+++ b/limbo/affiliate/templates/page/bas.html
@@ -9,6 +9,13 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" ></script>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0" nonce="DMyYgz5Q"></script>
     <script src="https://platform-api.sharethis.com/js/sharethis.js#property=5f350ba3de52a0001208d87c&product=inline-share-buttons" async="async"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-174458117-2');
+    </script>
     {% load static%}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'pageCss/Mobile/mobileSpecCss.css' %}">
