--- a/limbo/affiliate/templates/blog/mobile/non-chinese-mobile/non-chinese-mobile.html
+++ b/limbo/affiliate/templates/blog/mobile/non-chinese-mobile/non-chinese-mobile.html
@@ -23,7 +23,7 @@
 {% endblock script %}
 {% block style %}
 <style>
-  p{font-family: sans-serif;font-size: 17px;}@media (max-width: 768px){p{font-size: 18px;}.content{font-sipx;}ul{margin-left: -10px;}li{font-size: 17px;}footer p{font-size: 14px;}}
+  p{font-family: sans-serif;font-size: 17px;}@media (max-width: 768px){p{font-size: 18px;}.content{font-size: 18px;}ul{margin-left: -10px;}li{font-size: 17px;}footer p{font-size: 14px;}}
 </style>
 {% endblock style %}
   {% load static %}
