--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -751,9 +751,9 @@
         <aside class="aside">
           <h4>Follow Us</h4>
           <div class="social-link">
-            <a href="#" class="fa fa-facebook social social-fb"></a>
-            <a href="#" class="fa fa-instagram social social-insta"></a>
-            <a href="#" class="fa fa-twitter social social-twit"></a>
+            <a href="https://www.facebook.com/hipeinIndia/" class="fa fa-facebook social social-fb"></a>
+            <a href="https://www.instagram.com/?hl=en" class="fa fa-instagram social social-insta"></a>
+            <a href="https://twitter.com/hipein1" class="fa fa-twitter social social-twit"></a>
           </div>
           <h4 class="Category">Categories</h4>
           <div class="cat-link">
