--- a/limbo/affiliate/templates/page/contact us.html
+++ b/limbo/affiliate/templates/page/contact us.html
@@ -3,11 +3,12 @@
 {% block key%}<meta name="keywords" content="hipein contact us, contact us hipein"> {% endblock key%}
   {% load static %}
     {% block title%}Contact Us - hipein.com{% endblock title%}
-    {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
+    {% block style %}
     <style>
       p{font-family: sans-serif;font-size: 17px; line-height: 30px;}footer p{font-size: 15px; line-height: 20px;}.map{width: 100%; height: 400px;}@media (max-width: 768px){p{font-size: 19px;}.content{font-size: 18px;}ul{margin-left: -10px;}li{font-size: 18px;}.map{width: 100%; height: 250px;}footer p{font-size: 14px; line-height: 20px;}}
     </style>
+    {% endblock style %}
     <!-- review and spec -->
     <div class="wrapper">
       <div class="main">
@@ -17,20 +18,20 @@
           <hr class="my-2">
           <h2 style="padding-left:3px; border-left: 2px solid red; font-weight: 400;background: #dfd; color: #0a3d62;">Brand And Advertisers</h2>
           <p>If you are an advertiser or PR (public relations) agent looking for advertisements or reviews on  hipein and would like to get in touch with us. You can write to us at the email address below.</p>
-          <h4 style="padding-left:3px; border-left: 2px solid red; font-weight: 400; ">Email To US</h4>
-        </div>
-        <div>
-          <img class="image" src="{% static 'image\article\mobile\non chinese mobile\1.jpg '%}" alt="">
-          <hr class="my-2">
         </div>
         <div class="info">
+          <h4 style="padding-left:3px; border-left: 2px solid red; font-weight: 400; ">Email To US</h4>
+          <div>
+            <img class="image" src="{% static 'image\article\mobile\non chinese mobile\1.jpg '%}" alt="">
+            <hr class="my-2">
+          </div>
           <p>Disclosure* – Please Note – hipein.com is a <b>tech product review and news website</b>, and we don’t sell any products either online or offline.</p>
           <p style="font-weight: 400;"><b>You can contact us by email only for Media Relations or Advertising Purpose – <a href="#">rohitkr0036@gmail.com</a></b></p>
           <p style="font-weight: 400;"><b>Also, You Can Connect With Us On Facebook, instagram or Twitter:</b></p>
           <ul class="content" style="margin-top: -10px;">
-            <li>You can reach us by our Facebook Page- <a href="#">hipein on Facebook</a>.</li>
-            <li>You can reach us by our instagram id- <a href="#">hipein_india on instagram</a>.</li>
-            <li>You can reach us by our Twitter id - <a href="#">hipein1 on Twitter</a>.</li>
+            <li>You can reach us by our Facebook Page- <a href="https://www.facebook.com/hipeinIndia/">hipein on Facebook</a>.</li>
+            <li>You can reach us by our instagram id- <a href="https://www.instagram.com/?hl=en">hipein_india on instagram</a>.</li>
+            <li>You can reach us by our Twitter id - <a href="https://twitter.com/hipein1">hipein1 on Twitter</a>.</li>
           </ul>
           <h4 style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">Our location</h4>
           <img class="image" src="{% static 'image\article\mobile\non chinese mobile\2.jpg '%}" alt="">
@@ -41,6 +42,7 @@
           <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m22!1m12!1m3!1d58853.979167072655!2d86.19346443053632!3d22.788612878309184!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m7!3e0!4m0!4m4!2s22.788931122843376%2C%2086.22861061074424!3m2!1d22.7889311!2d86.2286106!5e0!3m2!1sen!2sin!4v1597834395357!5m2!1sen!2sin"  style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           <br>
         </div>
+        <br>
       </div>
     </div>
     {% endblock content%}
