--- a/limbo/affiliate/templates/page/contact us.html
+++ b/limbo/affiliate/templates/page/contact us.html
@@ -25,7 +25,7 @@
             <img class="image" src="{% static 'image\article\mobile\non chinese mobile\1.jpg' %}" alt="">
             <hr class="my-2">
           </div>
-          <p>Disclosure* – Please Note – hipein.com is a <b>tech product review and news website</b>, and we don’t sell any products either online or offline.</p>
+          <p>Disclosure* – Please Note – hipein.com is a <b>gadgets review and tech news website</b>. we don’t sell any products either online or offline.</p>
           <p style="font-weight: 400;"><b>You can contact us by email only for Media Relations or Advertising Purpose – <a href="#">rohitkr0036@gmail.com</a></b></p>
           <p style="font-weight: 400;"><b>Also, You Can Connect With Us On Facebook, instagram or Twitter:</b></p>
           <ul class="content" style="margin-top: -10px;">
