--- a/limbo/affiliate/templates/page/srch.html
+++ b/limbo/affiliate/templates/page/srch.html
@@ -170,7 +170,7 @@
         <a href="#"><i class="fa fa-google" aria-hidden="true"></i></a>
       </div>
       <div class="product">
-        <h2 class="product_text">Quick Links</h2>
+        <h2 class="product_text" style="margin-left: -3.9px; font-weight: 400; color: #00a8ff">Quick Links</h2>
         <a class="product_link" href="{% url 'apple'%}">Apple</a><br>
         <a class="product_link" href="{% url 'samsung'%}">Samsung</a><br>
         <a class="product_link" href="{% url 'xiaomi'%}">Xiaomi</a><br>
@@ -179,9 +179,10 @@
         <a class="product_link" href="{% url 'vivo'%}">Vivo</a><br>
       </div>
       <div class="footer_link">
-        <h2 class="contact_us">Contact Us</h2>
-        <p><i class="fa fa-phone" aria-hidden="true"> 8340261943</i></p>
-        <i class="fa fa-envelope-o" aria-hidden="true"></i> rohitkr0036@gmail.com
+        <h2 class="product_link" style="margin-left: -3.9px; font-weight: 400; color: #00a8ff">Contact Us</h2>
+        <a class="product_link" href="{% url 'contactus'%}">Contact Page</a><br>
+        <a class="product_link" href="{% url 'privacypolicy'%}">privacy & policy</a><br>
+        <a class="product_link" href="{% url 'home'%}">Home page</a><br>
       </div>
       <div class="copyright">
         <p class="copyright_text">copyright &copy; | hipein.com 2020 | design by Rohit Raj</p>
