--- a/limbo/affiliate/templates/mobile/mi/poco m2 pro/poco m2 pro.html
+++ b/limbo/affiliate/templates/mobile/mi/poco m2 pro/poco m2 pro.html
@@ -38,10 +38,10 @@
             <li>Fast charging 33W.</li>
           </ul>
           <div class="aff-link1">
-            <form action="https://www.amazon.in/Note-Pro-Space-Black-64GB/dp/B07VWXLRRH/ref=sr_1_1?dchild=1&keywords=Redmi+Note+7+Pro&qid=1594890725&sr=8-1">
+            <form action="https://www.flipkart.com/poco-m2-pro-out-blue-64-gb/p/itm9fa1bcc61b2c1?pid=MOBFT7MKRQXK9KKF&lid=LSTMOBFT7MKRQXK9KKFVOC7BR&marketplace=FLIPKART&srno=b_1_1&otracker=hp_bannerads_1_2.bannerAdCard.BANNERADS_DVC4XRD28E5A&fm=organic&iid=fcfed326-bb92-4af4-885b-2530c017b8a1.MOBFT7MKRQXK9KKF.SEARCH&ppt=browse&ppn=browse&ssid=1tmojbcm3k0000001597988763097">
               <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
             </form>
-            <form action="https://www.amazon.in/Note-Pro-Space-Black-64GB/dp/B07VWXLRRH/ref=sr_1_1?dchild=1&keywords=Redmi+Note+7+Pro&qid=1594890725&sr=8-1">
+            <form action="https://www.flipkart.com/poco-m2-pro-out-blue-64-gb/p/itm9fa1bcc61b2c1?pid=MOBFT7MKRQXK9KKF&lid=LSTMOBFT7MKRQXK9KKFVOC7BR&marketplace=FLIPKART&srno=b_1_1&otracker=hp_bannerads_1_2.bannerAdCard.BANNERADS_DVC4XRD28E5A&fm=organic&iid=fcfed326-bb92-4af4-885b-2530c017b8a1.MOBFT7MKRQXK9KKF.SEARCH&ppt=browse&ppn=browse&ssid=1tmojbcm3k0000001597988763097">
               <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
             </form>
           </div>
